# chop-shop

./: .env  .gitignore  Cargo.toml  README.md  chop_shop.db  log.txt
migrations/: 20231010_create_items_table.sql
src/: clear_text_logging.rs  config.rs  contact_form.rs  main.rs  sell_parts.rs  setup.rs  sql_injection.rs
templates/: contact.html  contact_confirmation.html  greet.html  search.html  sell.html
templates/css/: rusted-metal.css
